--- a/internal/pages/main/main.html
+++ b/internal/pages/main/main.html
@@ -2,6 +2,7 @@
 <html>
   {{template "head.html" . }} 
   <body>
+    <div class="bg"></div>
     <div class="main-outer">
       {{template "autosplash.html" . }}
       {{template "qr.html" . }}
